# PyJobShop

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CpModel.py  LICENSE.md  Model.py  Objective.py  PWL.py  README.md  conftest.py  cp.py  cpo_config.py  flowshop.py  jobshop.py  notes.md  parse_aslib.py  parse_rcpsp_max.py  parse_rcpsp_ps.py  patterson.py  plot.py  project_scheduling.py  psplib.py  pyproject.toml  rcpsp.py  sandbox.py  setup.py  solve.py  step.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md
.github/workflows/: CI.yml  CodSpeed.yml  publish.yml
benchmarks/: README.md  test_benchmarks.py
configs/cpoptimizer/: first_feasible.toml
configs/ortools/: first_feasible.toml  lns_only.toml
cpmodel/: CpModelPlus.py  __init__.py  callbacks.py  hakank.py  test_CpModelPlus.py
cpmodel/cpsat-docs/: channeling.md  integer_arithmetic.md  model.md  scheduling.md  solver.md  toc.md  troubleshooting.md
docs/: README.md  conf.py
docs/source/: conf.py  index.rst  resources.rst
docs/source/api/: plot.rst  pyjobshop.rst
docs/source/dev/: contributing.rst  new_variants.rst  resources.rst
docs/source/setup/: citing.rst  getting_help.rst  installation.rst  intro_to_cp.rst  intro_to_scheduling.rst
examples/: breaks.ipynb  callback_example.ipynb  flexible_job_shop.ipynb  flow_shop.ipynb  flowshop.py  hybrid_flow_shop.ipynb  objectives.ipynb  objectives_examples.ipynb  optional_tasks.ipynb  permutation_flow_shop.ipynb  project_scheduling.ipynb  quick_examples.ipynb  resource_constrained_project_scheduling.ipynb  sequencing.ipynb  sequencing_constraints.ipynb  simple_example.ipynb  solver_tips.ipynb  storage_units.ipynb
examples/data/: j9041_6.sm  r54_9.mm
fjsp/: CpModel.py  Model.py  ProblemData.py  Solution.py  __init__.py  constants.py  plot.py
fjsp/cp/: CpModel.py  __init__.py  constraints.py  default_model.py  objectives.py  result2solution.py  variables.py
fjsp/google/: constraints.py  default_model.py  objectives.py  result2solution.py  variables.py
parse/: parse_benchmark.py  write.py
pyjobshop/: Constraints.py  Model.py  ProblemData.py  Result.py  Solution.py  __init__.py  cli.py  constants.py  json.py  plot.py  protocols.py  read.py  show_versions.py  solve.py  utils.py
pyjobshop/apis/: __init__.py  ortools.py
pyjobshop/cp/: constraints.py  default_model.py  objectives.py  result2solution.py  variables.py
pyjobshop/cpoptimizer/: ConstraintsManager.py  ObjectiveManager.py  Solver.py  VariablesManager.py  __init__.py  constraints.py  create_model.py  default_model.py  objectives.py  result2solution.py  solve.py  variables.py
pyjobshop/ortools/: Constraints.py  ConstraintsManager.py  ModelBuilder.py  ORToolsVariables.py  ObjectiveManager.py  Objectives.py  Solver.py  Variables.py  VariablesManager.py  __init__.py  constraints.py  create_model.py  default_model.py  model.py  objectives.py  result2solution.py  solve.py  variables.py
pyjobshop/parse/project/: ProjectInstance.py  README.md  __init__.py  parse_mplib.py  parse_patterson.py  parse_psplib.py  patterson.py  project_scheduling.py  psplib.py
pyjobshop/plot/: __init__.py  plot_machine_gantt.py  plot_machine_gantt_plotly.py  plot_resource_gantt.py  plot_resource_usage.py  plot_task_gantt.py  utils.py
pyjobshop/solvers/: Solver.py  utils.py
pyjobshop/solvers/cpoptimizer/: CPModel.py  Constraints.py  Objective.py  ObjectiveManager.py  Solver.py  Variables.py  __init__.py  utils.py
pyjobshop/solvers/ortools/: CPModel.py  Constraints.py  Objective.py  Solver.py  Variables.py  __init__.py  utils.py
tests/: test_ModeDependencies.py  test_Model.py  test_ProblemData.py  test_Result.py  test_Solution.py  test_benchmarks.py  test_examples.py  test_json.py  test_read.py  test_solve.py  test_utils.py  utils.py
tests/data/: PSP1.sch  UBO10_01.sch  aslib0_0.rcp  c154_3.mm  edata-car1.fjs  small.fjs  small.mm
tests/examples/: test_Model.py  test_ProblemData.py  test_flowshop.py  test_jobshop.py
tests/ortools/: test_Solver.py
tests/parse/project/: test_parse_mplib.py  test_parse_patterson.py  test_parse_psplib.py  utils.py
tests/parse/project/data/: Jall1_1.mm  MPLIB1_Set1_0.rcmp  MPLIB2_Set1_0.rcmp  RG300_1.rcp
tests/plot/: test_plot.py  test_plot_machine_gantt.py  test_plot_resource_gantt.py  test_plot_resource_usage.py  test_plot_task_gantt.py
tests/solvers/: test_utils.py
tests/solvers/cpoptimizer/: test_CPModel.py  test_Solver.py
tests/solvers/ortools/: test_CPModel.py  test_Solver.py  test_utils.py
