[project]
name = "pyjobshop"
version = "0.1.0a"
description = "Solving scheduling problems with constraint programming."
authors = [
    { name = "Leon Lan", email = "l.lan@vu.nl"},
    { name = "Joost Berkhout", email = "joost.berkhout@vu.nl" }
]
license = { text = "MIT License" }
readme = "README.md"
keywords = [
    "scheduling",
    "job shop",
    "flow shop",
    "project scheduling",
    "constraint programming",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9,<3.13"
dependencies = [
    "ortools>=9.10.4067,<10",
    "matplotlib>=3.9.2",
    "fjsplib",
    "psplib>=0.2.0",
    "tqdm>=4.66.5",
    "tomli>=2.0.1",
]


[project.urls]
Homepage = "https://pyjobshop.org"
Documentation = "https://pyjobshop.org"
Repository = "https://github.com/PyJobShop/PyJobShop"
Issues = "https://github.com/PyJobShop/PyJobShop/issues"


[project.scripts]
pyjobshop = 'pyjobshop:cli.main'


[project.optional-dependencies]
docplex = [
    "docplex>=2.28.240",
]
cplex = [
    "cplex>=22.1.2",
]


[dependency-groups]
dev = [
    "pre-commit>=3.8.0",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "codecov>=2.1.13",
]
docs = [
    "sphinx>=7.4.7",
    "nbsphinx>=0.9.5",
    "numpydoc>=1.8.0",
    "sphinx-immaterial>=0.12.2",
]
examples = [
    "jupyter>=1.0.0",
]


[tool.uv]
default-groups = ["dev"]


[tool.uv.sources]
fjsplib = { git = "https://github.com/PyJobShop/FJSPLIB.git", rev = "75b2d18" }


[tool.mypy]
ignore_missing_imports = true


[tool.black]
line-length = 79


[tool.ruff]
line-length = 79
extend-include = ["*.ipynb"]


[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E741",  # ambiguous variable name, needed for indexing
    "C901",  # too complex
]


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # ignore unused module imports


[tool.ruff.lint.isort]
known-first-party = ["pyjobshop", "tests"]
known-third-party = ["ortools"]


[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=xml"
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "docs/*",
    "tests/*",
    "setup.py",
    "cpo_config.py",
    "conftest.py",
    "pyjobshop/solvers/*",
    "pyjobshop/cli.py",
    "pyjobshop/show_versions.py"
]


[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
