[project]
name = "pyjobshop"
version = "0.0.7"
description = "Solving scheduling problems with constraint programming."
authors = [
    { name = "Leon Lan", email = "leon.lanyidong@gmail.com" },
    { name = "Joost Berkhout", email = "joost.berkhout@vu.nl" }
]
license = { text = "MIT License" }
readme = "README.md"
keywords = [
    "scheduling",
    "job shop",
    "project scheduling",
    "constraint programming",
    "operations research",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = [
    "ortools>=9.12.4544",
    "matplotlib>=3.9.2",
    "fjsplib>=0.0.2",
    "psplib>=0.4.0",
    "tqdm>=4.66.5",
    "tomli>=2.0.1",
]


[project.urls]
Homepage = "https://pyjobshop.org"
Documentation = "https://pyjobshop.org"
Repository = "https://github.com/PyJobShop/PyJobShop"
Issues = "https://github.com/PyJobShop/PyJobShop/issues"


[project.scripts]
pyjobshop = 'pyjobshop:cli.main'


[project.optional-dependencies]
docplex = [
    "docplex>=2.28.240",
]
cplex = [
    "cplex>=22.1.2",
]


[dependency-groups]
dev = [
    "pre-commit>=3.8.0",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-codspeed>=4.0.0",
    "pytest-sugar>=1.0.0",
    "codecov>=2.1.13",
]
docs = [
    "sphinx>=7.4.7",
    "nbsphinx>=0.9.5",
    "numpydoc>=1.8.0",
    "sphinx-immaterial>=0.12.2",
]
examples = [
    "jupyter>=1.0.0",
]


[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"


[tool.uv.build-backend]
module-name = "pyjobshop"
module-root = ""


[tool.mypy]
ignore_missing_imports = true


[tool.ruff]
line-length = 79
extend-include = ["*.ipynb"]


[tool.ruff.lint]
select = [
    "E", "F", "I", "NPY", "PYI", "Q", "RET", "RSE", "RUF", "SLF", "SIM", "TC"
]


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # ignore unused module imports


[tool.ruff.lint.isort]
known-first-party = ["pyjobshop", "tests"]
known-third-party = ["ortools"]


[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=xml"
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "docs/*",
    "tests/*",
    "benchmarks/*",
    "cpo_config.py",
    "conftest.py",
    "pyjobshop/solvers/*",
    "pyjobshop/cli.py",
    "pyjobshop/show_versions.py"
]
